cloud/k8s/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${service}"
  namespace: "${namespace}"
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000  # The port your application is listening on in the container
  type: ClusterIP
