cloud/k8s/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: "${namespace}"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
      - registry.lillecarl.com
    secretName: registry-lillecarl-com-tls
  rules:
    - host: registry.lillecarl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "${service}"
                port:
                  number: 5000
